[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scenes/startArea/worldMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/startArea/EntrySpace.gd" type="Script" id=4]
[ext_resource path="res://Scenes/SettingsMenu/settingsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Teko-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/textBox/textBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/background.png" type="Texture" id=8]
[ext_resource path="res://Assets/mist/frame0017.png" type="Texture" id=9]
[ext_resource path="res://Assets/mist/frame0010.png" type="Texture" id=11]
[ext_resource path="res://Assets/mist/frame0004.png" type="Texture" id=18]
[ext_resource path="res://Assets/mist/frame0018.png" type="Texture" id=19]
[ext_resource path="res://Assets/mist/frame0019.png" type="Texture" id=21]
[ext_resource path="res://Assets/mist/frame0006.png" type="Texture" id=24]
[ext_resource path="res://Assets/mist/frame0020.png" type="Texture" id=25]
[ext_resource path="res://Assets/mist/frame0007.png" type="Texture" id=27]
[ext_resource path="res://Assets/mist/frame0009.png" type="Texture" id=28]
[ext_resource path="res://Assets/mist/frame0011.png" type="Texture" id=31]
[ext_resource path="res://Assets/mist/frame0001.png" type="Texture" id=36]
[ext_resource path="res://Assets/mist/frame0016.png" type="Texture" id=37]
[ext_resource path="res://Assets/mist/frame0005.png" type="Texture" id=39]
[ext_resource path="res://Assets/mist/frame0002.png" type="Texture" id=41]
[ext_resource path="res://Assets/mist/frame0003.png" type="Texture" id=48]
[ext_resource path="res://Assets/mist/frame0008.png" type="Texture" id=52]
[ext_resource path="res://Assets/mist/frame0014.png" type="Texture" id=53]
[ext_resource path="res://Assets/mist/frame0015.png" type="Texture" id=59]
[ext_resource path="res://Assets/mist/frame0012.png" type="Texture" id=60]
[ext_resource path="res://Assets/mist/frame0013.png" type="Texture" id=61]
[ext_resource path="res://Assets/mist/frame0000.png" type="Texture" id=63]

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/light.png-9e6eff90e703f084db87a88d6ba8f890.stex"

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -48.9833, -45.9201, -50.0482, 47.9166, -50.0482, 47.9166, 50.0482, 46.9184, 50.0482, 46.9184, 48.9833, -48.9149, 47.9185, -50.9114 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="DynamicFont" id=7]
size = 42
extra_spacing_char = 15
extra_spacing_space = 15
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 22.25, 278 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 63 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 48 ), ExtResource( 18 ), ExtResource( 39 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 52 ), ExtResource( 28 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 53 ), ExtResource( 59 ), ExtResource( 37 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 25 ) ],
"loop": true,
"name": "mist",
"speed": 5.0
} ]

[node name="EntrySpace" type="Control"]
script = ExtResource( 4 )

[node name="background" type="TextureRect" parent="."]
margin_left = -12416.0
margin_top = -1832.0
margin_right = 1986.0
margin_bottom = 12570.0
rect_scale = Vector2( 1.37122, 0.680183 )
texture = ExtResource( 8 )

[node name="worldMap" parent="." instance=ExtResource( 1 )]
margin_left = 802.0
margin_top = 1088.0
margin_right = 802.0
margin_bottom = 1088.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1060, 1600 )
rotation = -4.70422
scale = Vector2( 0.157201, 0.59011 )
texture = SubResource( 3 )
offset = Vector2( 0, 1600 )
shadow_enabled = true
shadow_color = Color( 0.686275, 0.0901961, 0.0901961, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 888, 1584 )
collision_layer = 1
__meta__ = {
"_edit_group_": true
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
occluder = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="colliders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="leftWallSpace" type="CollisionPolygon2D" parent="colliders"]
polygon = PoolVector2Array( 576, 576, -576, 576, -576, 2568, -1152, 2568, -1390.57, 2568.18, -1368, 0, 384, 0, 384, -832, 576, -832 )

[node name="rightWallSpace" type="CollisionPolygon2D" parent="colliders"]
polygon = PoolVector2Array( 1440, 4576, 1440, 4008, 3168, 4008, 3168, 3432, 3456, 3432, 3456, 3144, 3752, 3144, 3752, 2288, 3168, 2280, 3168, 1704, 2304, 1704, 2304, 2280, 1152, 2280, 1152, 1152, 2304, 1152, 2304, 0, 1152, 0, 1152, -576, 576, -576, 576, -832, 4352, -824, 4352, 4712 )

[node name="well" type="CollisionPolygon2D" parent="colliders"]
position = Vector2( 0, -4 )
polygon = PoolVector2Array( 392, 4152, 408, 4040, 472, 3944, 544, 3880, 640, 3840, 712, 3832, 808, 3840, 904, 3888, 968, 3936, 1024, 4016, 1056, 4128, 1048, 4232, 1008, 4328, 944, 4408, 872, 4456, 808, 4480, 744, 4488, 640, 4480, 560, 4448, 496, 4400, 448, 4344, 424, 4304, 400, 4240 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="colliders"]
polygon = PoolVector2Array( 1432, 4576, 1512, 4576, 1512, 4656, 208, 4656, -896, 4656, -1344, 4656, -1336, 3432, 288, 3432, 288, 4576, 296, 4576 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SettingsMenu" parent="GUI" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = -640.0
margin_bottom = -360.0

[node name="Timer" type="Timer" parent="GUI"]

[node name="timerText" type="Label" parent="GUI/Timer"]
margin_left = 612.0
margin_top = 10.0
margin_right = 656.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 1, 0.203922, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )

[node name="textBox" parent="GUI" instance=ExtResource( 7 )]

[node name="exitCaveArea" type="Area2D" parent="."]
position = Vector2( 1153, 1583 )
rotation = -1.5562
scale = Vector2( 2.81069, 2.75853 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="caveExitOval" type="CollisionShape2D" parent="exitCaveArea"]
scale = Vector2( 2.12582, 2.45751 )
shape = SubResource( 5 )

[node name="exitDirections" type="Label" parent="exitCaveArea"]
visible = false
margin_left = 20.0
margin_top = -10.0
margin_right = 359.0
margin_bottom = 115.0
rect_rotation = 90.0
rect_scale = Vector2( 0.0838492, 0.334329 )
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 7 )
text = "Press Enter 
to exit cave"
align = 1

[node name="SteamVents" type="Node" parent="."]

[node name="1" type="Area2D" parent="SteamVents"]
position = Vector2( -1484, 2993 )

[node name="1_collider" type="CollisionShape2D" parent="SteamVents/1"]
position = Vector2( 115, -236 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/1"]
visible = false
position = Vector2( -96, -270 )
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="2" type="Area2D" parent="SteamVents"]
position = Vector2( -1800, 2996 )

[node name="2_collider" type="CollisionShape2D" parent="SteamVents/2"]
position = Vector2( 163, 239 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/2"]
visible = false
position = Vector2( -85, 285 )
rotation = 3.13913
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="3" type="Area2D" parent="SteamVents"]
position = Vector2( -2656, 2996 )

[node name="3_collider" type="CollisionShape2D" parent="SteamVents/3"]
position = Vector2( 175, -230 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/3"]
visible = false
position = Vector2( -75, -276 )
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="4" type="Area2D" parent="SteamVents"]
position = Vector2( -2968, 2996 )

[node name="4_collider" type="CollisionShape2D" parent="SteamVents/4"]
position = Vector2( 209, 244 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/4"]
visible = false
position = Vector2( -71, 281 )
rotation = 3.13307
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="5" type="Area2D" parent="SteamVents"]
position = Vector2( -3248, 2993 )

[node name="5_collider" type="CollisionShape2D" parent="SteamVents/5"]
position = Vector2( 133, 248 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/5"]
visible = false
position = Vector2( -73, 285 )
rotation = 3.13857
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="6" type="Area2D" parent="SteamVents"]
position = Vector2( -4104, 2996 )

[node name="6_collider" type="CollisionShape2D" parent="SteamVents/6"]
position = Vector2( 185, -233 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/6"]
visible = false
position = Vector2( -68, -274 )
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="7" type="Area2D" parent="SteamVents"]
position = Vector2( -4392, 2996 )

[node name="7_collider" type="CollisionShape2D" parent="SteamVents/7"]
position = Vector2( 186, 238 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/7"]
visible = false
position = Vector2( -87, 281 )
rotation = 3.13735
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="8" type="Area2D" parent="SteamVents"]
position = Vector2( -5256, 2996 )

[node name="8_collider" type="CollisionShape2D" parent="SteamVents/8"]
position = Vector2( 207, -229 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/8"]
visible = false
position = Vector2( -66, -274 )
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="9" type="Area2D" parent="SteamVents"]
position = Vector2( -5528, 2993 )

[node name="9_collider" type="CollisionShape2D" parent="SteamVents/9"]
position = Vector2( 221, 255 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/9"]
visible = false
position = Vector2( -102, 287 )
rotation = 3.1366
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[node name="10" type="Area2D" parent="SteamVents"]
position = Vector2( -5832, 2993 )

[node name="10_collider" type="CollisionShape2D" parent="SteamVents/10"]
position = Vector2( 115, 252 )
shape = SubResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="SteamVents/10"]
visible = false
position = Vector2( -90, 285 )
rotation = 3.13277
scale = Vector2( 6, 6 )
frames = SubResource( 9 )
animation = "mist"

[connection signal="timeout" from="GUI/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="exitCaveArea" to="." method="_on_exitCaveArea_body_entered"]
[connection signal="body_exited" from="exitCaveArea" to="." method="_on_exitCaveArea_body_exited"]
